--- a/src/pages/game-pages/app-page-game.css
+++ b/src/pages/game-pages/app-page-game.css
@@ -1,8 +1,9 @@
 .content {
-    max-width: 1000px;
-    margin: 20px auto;
+  max-width: 100%;
+    margin: 10px auto;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(90deg, #0088cc, #2c3e50) !important;
   }
   
   
